bug de overflow solucionado

--- a/yes/css/styles.css
+++ b/yes/css/styles.css
@@ -14,6 +14,8 @@ body {
     justify-content: center;
     height: 100vh;
     align-items: center;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 
